--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
- Green_Screen/
- convival tech hub
- coronavirus.txt
- coronavirus/
- coronavirus_live_tracker/README.md
+ coronavius.txt
+cors example.js
+css_alpha_channel.txt
