--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
- coronavius.txt
+coronavius.txt
 cors example.js
 css_alpha_channel.txt
+convival tech hub/
+coronavirus_live_tracker/README.md
+free_code_camp/
